[package]
name = "php-sys-ng"
description = "Native PHP bindings for Rust"
version = "9.0.1"
authors = ["Aaron Dewes <aaron@nirvati.org>", "Herman J. Radtke III <herman@hermanradtke.com>", "Heinz Gies <heinz@licenser.net>"]
links = "php8"
build = "build.rs"
edition = "2021"
license = "MIT"

[build-dependencies]
bindgen = "0.66"
cc = "1.0"
num_cpus="1.0"
